--- a/style.css
+++ b/style.css
@@ -52,3 +52,60 @@ nav ul li a{
     font-size: 1.2em;
     font-weight: 500;
 }
+
+nav ul li a:hover{
+    color: deeppink;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 100px 0;
+}
+
+.col-1{
+    flex-basis: 40%;
+    position: relative;
+    margin-left: 50px;
+}
+
+.col-1 h2{
+    font-size: 54px;
+}
+.col-1 h3{
+    font-size: 30px;
+    color: #707070;
+    font-weight: 100;
+    margin: 20px 0 10px;
+}
+
+.col-1 p{
+    font-size: 16px;
+    color: #b7b7b7;
+    font-weight: 100;
+}
+
+.col-1 h4{
+    margin: 30px 0;
+    font-size: 20px;
+}
+
+button{
+    width: 140px;
+    border: 0;
+    padding: 12px 10px;
+    outline: none;
+    color: #fff;
+    font-family: inherit;
+    font-size: 1.2em;
+    font-weight: 500;
+    background: linear-gradient(to right, deeppink, salmon);
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+button img{
+    width: 30px;
+    display: none;
+}
