--- a/style.css
+++ b/style.css
@@ -121,3 +121,13 @@ button:hover{
     justify-content: space-between;
     align-items: center;
 }
+
+.col-1::after{
+    content: "";
+    width: 10px;
+    height: 57%;
+    background: linear-gradient(salmon, deeppink);
+    position: absolute;
+    left: -40px;
+    top: 22px;
+}
