--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body{
 .menu-icon{
     width: 25px;
     cursor: pointer;
+    display: none;
 }
 
 nav{
@@ -153,4 +154,55 @@ button:hover{
     width: 80%;
     z-index: -1;
     transform: translateX(155px);
+}
+
+.add-btn img{
+    width: 35px;
+    margin-bottom: 5px;
+}
+
+.add-btn{
+    text-align: center;
+    color: #fff;
+    cursor: pointer;
+}
+
+.social-links img{
+    height: 20px;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.social-links{
+    text-align: center;
+}
+
+@media only screen and (max-width:700px){
+    nav ul{
+        width: 100%;
+        background: linear-gradient(deeppink, salmon);
+        position: absolute;
+        top: 75px;
+        right: 0;
+        z-index: 2;
+    }
+    nav  ul li{
+        display: block;
+        margin: 10px 0;
+        margin-right: 40px;
+    }
+
+    nav ul li a{
+        color: #fff;
+    }
+
+
+    .menu-icon{
+        display: block;
+    }
+
+    #menuList{
+        overflow: hidden;
+        transition: 0.3s;
+    }
 }
